# sfmapi_gsplat

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sfmapi_gsplat/: __init__.py  plugin.py  protocol.py  server.py  trainer.py
tests/: test_protocol.py
