[project]
name = "sfmapi-gsplat"
version = "0.1.0"
description = "sfmapi container-service plugin for CUDA gsplat radiance training."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pillow>=10",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
cuda = [
    "torch==2.7.1",
    "gsplat==1.5.3",
]
test = [
    "httpx>=0.28",
    "pytest>=8.3",
    "ruff>=0.11",
]

[project.scripts]
sfmapi-gsplat = "sfmapi_gsplat.server:main"

[project.entry-points."sfmapi.backends"]
gsplat = "sfmapi_gsplat.plugin:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfmapi_gsplat"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
